motorcycle done teljesen

--- a/Motorcycles - VA/Solution.DesktopApp/Views/ManufacturerListView.xaml
+++ b/Motorcycles - VA/Solution.DesktopApp/Views/ManufacturerListView.xaml
@@ -42,7 +42,7 @@
 
                         <Label Grid.Column="0"
                                Text="Name"
-                               HorizontalTextAlignment="Center"
+                               HorizontalTextAlignment="Start"
                                Style="{x:StaticResource TableHeader}" />
                         <Label Grid.Column="1"
                                Text="Edit"
