--- a/Motorcycles - VA/Solution.DesktopApp/Components/TypeListComponent.xaml
+++ b/Motorcycles - VA/Solution.DesktopApp/Components/TypeListComponent.xaml
@@ -13,7 +13,7 @@
 
             <Label Grid.Column="0"
                    Text="{Binding Type.Name, Source={x:Reference this}}" 
-                   HorizontalTextAlignment="Center" VerticalTextAlignment="Center" />
+                   HorizontalTextAlignment="Start" VerticalTextAlignment="Center" />
             
             <ImageButton Grid.Column="1"
                          Source="{AppThemeBinding Light=edit_dark.png, Dark=edit_light.png}"
