--- a/Motorcycles - VA/Solution.DesktopApp/Views/AddManufacturerView.xaml
+++ b/Motorcycles - VA/Solution.DesktopApp/Views/AddManufacturerView.xaml
@@ -6,9 +6,8 @@
              xmlns:editors="clr-namespace:Syncfusion.Maui.Toolkit.NumericEntry;assembly=Syncfusion.Maui.Toolkit"
              x:Class="Solution.DesktopApp.Views.AddManufacturerView"
              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-             xmlns:validator="clr-namespace:Solution.Validators;assembly=Solution.Validators"
-             Title="AddManufacturerView">
-    <VerticalStackLayout>
+             xmlns:validator="clr-namespace:Solution.Validators;assembly=Solution.Validators" >
+<VerticalStackLayout>
         <Label 
             Text="Add Manufacturer"
             VerticalOptions="Center" 
