--- a/04 - Bills/Bills/Solution.DesktopApp/Components/BillListComponent.xaml
+++ b/04 - Bills/Bills/Solution.DesktopApp/Components/BillListComponent.xaml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Solution.DesktopApp.Components.MotorcycleListComponent"
+             x:Class="Solution.DesktopApp.Components.BillListComponent"
              x:Name="this">
     
     <Border Padding="0,10,0,10">
@@ -18,39 +18,28 @@
                 <ColumnDefinition Width="80" />
             </Grid.ColumnDefinitions>
 
-            <Image Grid.Column="0"
-                   HorizontalOptions="Center"
-                   WidthRequest="100">
-                <Image.Source>
-                    <UriImageSource Uri="{Binding Motorcycle.WebContentLink, Source={x:Reference this}}"
-                                    CacheValidity="10:00:00:00" />
-                </Image.Source>
-            </Image>
+            <Label Grid.Column="0"
+                   Text="{Binding Bill.BillNumber, Source={x:Reference this}}" 
+                   HorizontalTextAlignment="Center" VerticalTextAlignment="Center" />
             <Label Grid.Column="1"
-                   Text="{Binding Motorcycle.Manufacturer.Name, Source={x:Reference this}}" 
+                   Text="{Binding Bill.BillDate, Source={x:Reference this}}" 
                    HorizontalTextAlignment="Center" VerticalTextAlignment="Center" />
             <Label Grid.Column="2"
-                   Text="{Binding Motorcycle.Model, Source={x:Reference this}}" 
+                   Text="{Binding Bill.Items.Title.Value, Source={x:Reference this}}" 
                    HorizontalTextAlignment="Center" VerticalTextAlignment="Center" />
             <Label Grid.Column="3"
-                   Text="{Binding Motorcycle.Type.Name, Source={x:Reference this}}" 
-                   HorizontalTextAlignment="Center" VerticalTextAlignment="Center" />
+                   Text="{Binding Bill.Items.Price, Source={x:Reference this}}" 
+                   HorizontalTextAlignment="End" VerticalTextAlignment="Center" />
             <Label Grid.Column="4"
-                   Text="{Binding Motorcycle.ReleaseYear, Source={x:Reference this}}" 
-                   HorizontalTextAlignment="End" VerticalTextAlignment="Center" />
-            <Label Grid.Column="5"
-                   Text="{Binding Motorcycle.NumberOfCylinders, Source={x:Reference this}}" 
+                   Text="{Binding Bill.Items.Amount, Source={x:Reference this}}" 
                    HorizontalTextAlignment="End" VerticalTextAlignment="Center"/>
-            <Label Grid.Column="6"
-                   Text="{Binding Motorcycle.Cubic, Source={x:Reference this}}" 
-                   HorizontalTextAlignment="End" VerticalTextAlignment="Center" />
-            <ImageButton Grid.Column="7"
+            <ImageButton Grid.Column="5"
                          Source="{AppThemeBinding Light=edit_dark.png, Dark=edit_light.png}"
                          Command="{Binding EditCommand, Source={x:Reference this}}"
                          HorizontalOptions="End" VerticalOptions="Center" 
                          BackgroundColor="Transparent"
                          WidthRequest="25" HeightRequest="25"/>
-            <ImageButton Grid.Column="8"
+            <ImageButton Grid.Column="6"
                          Source="{AppThemeBinding Light=delete_dark.png, Dark=delete_light.png}"
                          Command="{Binding DeleteCommand, Source={x:Reference this}}"
                          CommandParameter="{Binding Motorcycle.Id, Source={x:Reference this}}"
