--- a/05 - Bills/Bills/Bills.DesktopApp/Resources/Styles/Colors.xaml
+++ b/05 - Bills/Bills/Bills.DesktopApp/Resources/Styles/Colors.xaml
@@ -8,12 +8,12 @@
     <!-- Note: For Android please see also Platforms\Android\Resources\values\colors.xml -->
 
 
-    <Color x:Key="Primary">#8D5F8C</Color>
-    <Color x:Key="PrimaryDark">#6B3F69</Color>
-    <Color x:Key="PrimaryDarkText">#242424</Color>
-    <Color x:Key="Secondary">#DDC3C3</Color>
-    <Color x:Key="SecondaryDarkText">#A376A2</Color>
-    <Color x:Key="Tertiary">#A376A2</Color>
+    <Color x:Key="Primary">#1F2933</Color>
+    <Color x:Key="PrimaryDark">#3B82F6</Color>
+    <Color x:Key="PrimaryDarkText">#60A5FA</Color>
+    <Color x:Key="Secondary">#F9FAFB</Color>
+    <Color x:Key="SecondaryDarkText">#111827</Color>
+    <Color x:Key="Tertiary">#7FB3A6</Color>
 
     <Color x:Key="White">White</Color>
     <Color x:Key="Black">Black</Color>
